--- a/app/sig/view.html
+++ b/app/sig/view.html
@@ -5,7 +5,7 @@
                 {{range .}}
                 <tr>
                     <td>
-                        <a href="/ssr/signatures/{{ .ID }}" hx-target="#signatures" hx-swap="outerHTML" hx-boost="true">{{ .Name }}</a>
+                        <a href="/ssr/signatures/{{ .ID }}" hx-target="#signatures" hx-swap="outerHTML" hx-boost="true">{{ .Title }}</a>
                     </td>
                 </tr>
             {{end}}
@@ -60,7 +60,7 @@
         }))
     </script>
     <div id="signature" x-data="root">
-        <input x-model="dto.name" class="form-control shadow-none">
+        <input x-model="dto.title" class="form-control shadow-none">
         <fieldset>
             <legend>pe</legend>
             {{template "ep" (dict "Ep" .PE "Path" "dto.pe")}}
